--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
   },
   "dependencies": {
     "body-parser": "1.18.3",
+    "cors": "2.8.4",
     "dotenv": "6.0.0",
     "express": "4.16.3",
-    "morgan": "1.9.0"
+    "morgan": "1.9.0",
+    "socket.io": "2.1.1"
   }
 }
