--- a/package.json
+++ b/package.json
@@ -19,24 +19,30 @@
   "keywords": [],
   "author": "Quidiox",
   "license": "MIT",
-  "devDependencies": {
-    "babel-eslint": "9.0.0",
-    "cross-env": "5.2.0",
-    "eslint": "5.5.0",
-    "eslint-config-prettier": "3.0.1",
-    "eslint-plugin-prettier": "2.6.2",
-    "eslint-plugin-standard": "4.0.0",
-    "husky": "0.14.3",
-    "lint-staged": "7.2.2",
-    "nodemon": "1.18.4",
-    "prettier": "1.14.2"
-  },
   "dependencies": {
+    "bcrypt": "3.0.1",
     "body-parser": "1.18.3",
+    "cookie-parser": "1.4.3",
     "cors": "2.8.4",
-    "dotenv": "6.0.0",
+    "dotenv": "6.1.0",
     "express": "4.16.3",
-    "morgan": "1.9.0",
+    "express-jwt": "5.3.1",
+    "helmet": "3.13.0",
+    "jsonwebtoken": "8.3.0",
+    "mongoose": "5.3.2",
+    "morgan": "1.9.1",
     "socket.io": "2.1.1"
+  },
+  "devDependencies": {
+    "babel-eslint": "10.0.1",
+    "cross-env": "5.2.0",
+    "eslint": "5.6.1",
+    "eslint-config-prettier": "3.1.0",
+    "eslint-plugin-prettier": "3.0.0",
+    "eslint-plugin-standard": "4.0.0",
+    "husky": "1.1.1",
+    "lint-staged": "7.3.0",
+    "nodemon": "1.18.4",
+    "prettier": "1.14.3"
   }
 }
