--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "lint-staged": {
     "*.js": [
-      "eslint --fix",
+      "eslint --ignore-path .gitignore --fix",
       "prettier --write",
       "git add"
     ]
