--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jsonwebtoken": "8.3.0",
     "mongoose": "5.3.2",
     "morgan": "1.9.1",
+    "serverless-http": "1.8.0",
     "socket.io": "2.1.1"
   },
   "devDependencies": {
