--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "socket.io": "2.1.1"
   },
   "devDependencies": {
+    "axios": "0.18.0",
     "babel-eslint": "10.0.1",
     "cross-env": "5.2.0",
     "eslint": "5.6.1",
@@ -42,8 +43,11 @@
     "eslint-plugin-prettier": "3.0.0",
     "eslint-plugin-standard": "4.0.0",
     "husky": "1.1.1",
+    "jest": "23.6.0",
     "lint-staged": "7.3.0",
+    "moxios": "0.4.0",
     "nodemon": "1.18.7",
-    "prettier": "1.14.3"
+    "prettier": "1.14.3",
+    "supertest": "3.4.1"
   }
 }
