--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node index",
     "watch": "cross-env NODE_ENV=development nodemon index backend.deep-chat.com",
-    "test": "cross-env NODE_ENV=test jest --verbose",
+    "test": "cross-env NODE_ENV=test jest --runInBand --detectOpenHandles --forceExit --verbose",
     "lint": "eslint ."
   },
   "husky": {
