--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "6.1.0",
     "express": "4.16.3",
     "express-jwt": "5.3.1",
+    "express-validator": "5.3.1",
     "helmet": "3.13.0",
     "jsonwebtoken": "8.3.0",
     "mongoose": "5.3.2",
